doc(#03): criação do guia de contribuição
Co-authored-by: Paulo <paulohgontijoo@gmail.com>
Co-authored-by: Pedro <pedrofcrux@gmail.com>
Co-authored-by: NATAN <natan.almeida03@gmail.com>
Co-authored-by: Paulo Henrique <pauloamino76@gmail.com>
Co-authored-by: Joao <joao.vitortnt5@gmail.com>
Co-authored-by: Jonas <jonascarlos.na@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,4 +26,6 @@ nav:
   - Planejamento: 
     - Quadro de disponibilidade: 'planejamento/quadro_de_disponibilidade.md'
     - Quadro de conhecimento: 'planejamento/heatmap.md'
+  - Guias:
+    - Guia de contribuição: 'guias/guia-contribuicao.md'
 
