--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,4 +28,5 @@ nav:
     - Quadro de conhecimento: 'planejamento/heatmap.md'
   - Guias:
     - Guia de contribuição: 'guias/guia-contribuicao.md'
+    - Código de conduta: 'guias/codigo-conduta.md'
 
