--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,4 +28,8 @@ nav:
     - Quadro de conhecimento: 'planejamento/heatmap.md'
   - Guias:
     - Guia de contribuição: 'guias/guia-contribuicao.md'
+  - Atas de Reunião:
+    - Reunião 1 - 25/03: 'atas/reuniao1.md'
+    - Reunião 2 - 01/04: 'atas/reuniao2.md'
+    - Reunião 3 - 03/04: 'atas/reuniao3.md'
 
