doc(#22): Adding Visão do Produto doc

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,4 +40,6 @@ nav:
     - Reunião 1 - 25/03: 'atas/reuniao1.md'
     - Reunião 2 - 01/04: 'atas/reuniao2.md'
     - Reunião 3 - 03/04: 'atas/reuniao3.md'
+  - Lean Inception:
+    - Visão do Produto: 'lean/visao_produto.md'
 
