doc(#51): Updating readme

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,9 @@ markdown_extensions:
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
 
+extra_css:
+  - stylesheets/extra.css
+
 nav:
   - Sobre: index.md
   - Planejamento: 
