doc(#24): Documentação dos Objetivos do Produto

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,4 +48,5 @@ nav:
   - Lean Inception:
     - Visão do Produto: 'lean/visao_produto.md'
     - É - Não É - Faz - Não Faz: 'lean/faz_nao_faz.md'
+    - Objetivos do Produto: 'lean/objetivos_produto.md'
 
