--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,4 +49,5 @@ nav:
     - Visão do Produto: 'lean/visao_produto.md'
     - É - Não É - Faz - Não Faz: 'lean/faz_nao_faz.md'
     - Objetivos do Produto: 'lean/objetivos_produto.md'
+    - Jornada: 'lean/jornada_usuário.md'
 
