--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,4 +49,6 @@ nav:
     - Visão do Produto: 'lean/visao_produto.md'
     - É - Não É - Faz - Não Faz: 'lean/faz_nao_faz.md'
     - Objetivos do Produto: 'lean/objetivos_produto.md'
+    - Revisão Técnica, de Negócio e de UX: 'lean/revisao_tecnica.md'
+
 
