doc(#35): atualizando documento de conhecimento

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,7 +35,7 @@ nav:
   - Sobre: 'index.md'
   - Planejamentos: 
     - Quadro de disponibilidade: 'planejamento/quadro_de_disponibilidade.md'
-    - Quadro de conhecimento: 'planejamento/heatmap.md'
+    - Quadro de conhecimento e pareamento: 'planejamento/conhecimento_pareamento.md'
     - Agenda e Ritual da Equipe: 'planejamento/agenda_ritual.md'
     - Planejamento de Comunicação: 'planejamento/comunicacao.md'
   - Guias:
