--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,7 @@ nav:
   - Planos:
     - Analise de Riscos: 'planos/planos_riscos.md'
     - Plano de qualidade: 'planos/plano_qualidade.md'
+    - Plano de custos: 'planos/planos_custos.md'
   - Atas de Reunião:
     - Reunião 1 - 25/03: 'atas/reuniao1.md'
     - Reunião 2 - 01/04: 'atas/reuniao2.md'
