doc(30)Documentação do lean no canvas

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,3 +63,4 @@ nav:
     - Sequenciador: 'lean/sequenciador.md'
     - Personas: 'lean/personas.md'
     - Brainstorm: 'lean/brainstorms_funcionalidades.md'
+    - Canvas MVP: 'lean/canvas_mvp.md'
