--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ nav:
     - Quadro de conhecimento e pareamento: 'planejamento/conhecimento_pareamento.md'
     - Agenda e Ritual da Equipe: 'planejamento/agenda_ritual.md'
     - Planejamento de Comunicação: 'planejamento/comunicacao.md'
+    - EAP: 'planejamento/eap.md'
   - Guias:
     - Guia de contribuição: 'guias/guia-contribuicao.md'
     - Código de conduta: 'guias/codigo-conduta.md'
