--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,6 +58,7 @@ nav:
     - Dojo Markdown: 'dojo/dojo-markdown.md'
     - Dojo Git: 'dojo/dojo-git.md'
     - Dojo Docker: 'dojo/dojo-docker.md'
+    - Dojo Frontend: 'dojo/dojo-frontend.md'
   - Lean Inception:
     - Visão do Produto: 'lean/visao_produto.md'
     - É - Não É - Faz - Não Faz: 'lean/faz_nao_faz.md'
