docs(#142): refatorando documento de plano de comunicação

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,17 +50,15 @@ nav:
     - Visão de Dados: 'organizacoes/visao-de-dados.md'
     - Visão de Endpoints: 'organizacoes/visao-de-endpoints.md'
   - Gestão do Projeto: 
-    - Quadro de Disponibilidade: 'planejamento/quadro_de_disponibilidade.md'
-    - Quadro de Conhecimento e Pareamento: 'planejamento/conhecimento_pareamento.md'
-    - Agenda e Ritual da Equipe: 'planejamento/agenda_ritual.md'
-    - Planejamento de Comunicação: 'planejamento/comunicacao.md'
+    - Plano de Comunicação: 'planejamento/plano_comunicacao.md'
+    - Plano de Qualidade: 'planos/plano_qualidade.md'
+    - Plano de Custos: 'planos/planos_custos.md'
     - Analise de Riscos: 'planos/planos_riscos.md'
-    - Plano de qualidade: 'planos/plano_qualidade.md'
-    - Plano de custos: 'planos/planos_custos.md'
+    - Quadro de Conhecimento e Pareamento: 'planejamento/conhecimento_pareamento.md'
   - Guias:
-    - Guia de contribuição: 'guias/guia-contribuicao.md'
-    - Guia de estilo: 'guias/guia-estilo.md'
-    - Código de conduta: 'guias/codigo-conduta.md'
+    - Guia de Contribuição: 'guias/guia-contribuicao.md'
+    - Guia de Estilo: 'guias/guia-estilo.md'
+    - Código de Conduta: 'guias/codigo-conduta.md'
   - Dojos:
     - Dojo Markdown: 'dojo/dojo-markdown.md'
     - Dojo Git: 'dojo/dojo-git.md'
