docs(#142): criação do post-mortem

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,4 +65,6 @@ nav:
     - Dojo Git: 'dojo/dojo-git.md'
     - Dojo Docker: 'dojo/dojo-docker.md'
     - Dojo Frontend: 'dojo/dojo-frontend.md'
+  - Encerramento:
+    - Post Mortem: 'encerramento/post-mortem.md'
 
